# rdr-prototype

./: Cargo.toml  README.md  first_five.sh  rdr_pvn_workload.json  second_five.sh  test.sh  web_urls.txt
.cargo/: config
examples/: bak_simple.rs  query_url.rs  resolve.rs  simple.rs
logs/: closed  unique
logs2/: closed
resolve_dns_results/: prune
src/: broken_urls.rs  certainly.rs  lib.rs  main.rs  prune_workload.rs  unreachable.rs  unresolvable.rs  utils.rs
